--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                      </div>
                     <div class="follow">
                      <h1> follow us on</h1>
-                     <div class="social">
+                     <div class="ficon">
                         <div class=" icon ">
                         <i class="fab fa-facebook-f"></i> 
                     </div>
